fix: enable all warnings of GCC, and it doesn't find an "off by 1" bug!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,9 @@ target_link_libraries(FarPDF PRIVATE
         Qt6::Widgets
         ${MUPDF_LIBRARIES})
 
+# ALL WARNING IS ERROR FOR GCC
+target_compile_options(FarPDF PRIVATE -Wall -Wextra -Werror)
+
 set_target_properties(FarPDF PROPERTIES
         MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
         MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
