feat: menubar search bar (still buggy)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ set(PROJECT_SOURCES
         graphicspageitem.h graphicspageitem.cpp
         graphicsview.h graphicsview.cpp
         toctreemodel.h toctreemodel.cpp
+        popupmenu.h popupmenu.cpp
         )
 
 qt_add_executable(FarPDF
