--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 
 project(FarPDF2 VERSION 0.1 LANGUAGES CXX)
 
-
-set(CMAKE_CXX_STANDARD 20)
+# yes, cutting edge C++ please
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
