--- a/src/meson.build
+++ b/src/meson.build
@@ -1,16 +1,16 @@
 far_sources = files(
-    'document.cpp',
-    'farmainwindow.cpp',
-    'graphicspageitem.cpp',
-    'graphicsview.cpp',
-    'main.cpp',
-    'popupmenu.cpp',
-    'toctreemodel.cpp',
+    'Document.cpp',
+    'GraphicsPageItem.cpp',
+    'GraphicsView.cpp',
+    'Main.cpp',
+    'MainWindow.cpp',
+    'PopupMenu.cpp',
+    'TocTreeModel.cpp',
 )
 
 far_moc_sources = files(
-    'farmainwindow.h',
-    'graphicsview.h',
-    'popupmenu.h',
-    'toctreemodel.h',
+    'GraphicsView.h',
+    'MainWindow.h',
+    'PopupMenu.h',
+    'TocTreeModel.h',
 )
